--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,10 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-
+.finishImg {
+	animation: morph 1s linear infinite;
+	cursor: pointer;
+}
 * {
 	font-family: IBMP, sans-serif;
 	/* font-weight: bold; */
@@ -286,10 +289,11 @@ video::slotted::-webkit-media-controls-container {
 	border-radius: 10vh;
 	z-index: 2;
 	overflow: hidden;
-	height: 90%;
-	padding: 0.5%;
+	height: 100%;
+	padding: 0.5vw;
 	background: #018c3c;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	animation: morph 1s linear infinite;
 
 	/* animation: morph 2s ease-in-out infinite; */
 }
@@ -451,6 +455,7 @@ a {
 	width: 100%;
 	background-color: #2f2e30;
 }
+
 .showCont {
 	position: absolute;
 	left: 0;
@@ -458,21 +463,16 @@ a {
 	width: 100%;
 	height: 100%;
 }
-.buttonGrid {
-	/* display: flex;
-	flex-direction: row;
-	height: 100%;
-	align-items: center;
 
-	gap: 0.7vw;
-	margin-left: 7%; */
+.buttonGrid {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(2, 1fr);
+	grid-template-rows: repeat(auto, 1fr);
 	gap: 0.7vw;
 	margin-left: 7%;
 	padding: 0.7vw;
 }
+
 .buttonGridContainer {
 	display: flex;
 	flex-direction: row;
@@ -485,11 +485,27 @@ a {
 	opacity: 0;
 	pointer-events: none;
 }
-.threesixty {
+
+.cornerIcons {
+	display: flex;
+	flex-direction: column;
+	gap: 1vw;
+	align-items: center;
 	margin-right: 2%;
-	width: 6.5%;
-	cursor: pointer;
 }
+
+.threesixty {
+	width: 5vw;
+	cursor: pointer;
+	animation: morph 1s linear infinite;
+}
+
+.multimedia {
+	width: 3vw;
+	cursor: pointer;
+	animation: morph 1s linear infinite;
+}
+
 .text {
 	height: 75%;
 	width: 100%;
@@ -502,10 +518,12 @@ a {
 	/* position: absolute; */
 	/* z-index: 1; */
 }
+
 .textContainer {
 	position: relative;
 	overflow: hidden;
 }
+
 .labelCont {
 	white-space: pre-wrap;
 	position: relative;
