test antes de intercambiar pageIndex por currentButton

--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ video::slotted::-webkit-media-controls-container {
 	border-radius: 10vh;
 	z-index: 2;
 	overflow: hidden;
-	height: 100%;
+	height: 4em;
 	padding: 0.5vw;
 	background: #018c3c;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
