--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,7 @@ html {
 	z-index: 1;
 	overflow: hidden;
 }
+
 .svgContainer {
 	display: flex;
 	align-items: center;
@@ -558,7 +559,8 @@ a {
 .firstPage {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	/* justify-content: space-around; */
+	justify-content: flex-start;
 	align-items: center;
 	position: absolute;
 	height: 100%;
@@ -675,15 +677,9 @@ li:last-child {
 
 .backButton {
 	background: hsla(0, 0%, 58%, 90%);
-	/* padding: 1% 1%; */
-	/* pointer-events: all; */
-	height: 80%;
+	/* height: 80%; */
+	height: 3em;
 	margin-left: 6.5%;
-	/* position: absolute; */
-	/* margin-left: 5%;
-	margin-top: 3%; */
-	/* left: 5%;
-	top: 5%; */
 }
 #loopVideo {
 	transition: all 0.5s ease-in-out;
