--- a/css/style.css
+++ b/css/style.css
@@ -405,12 +405,20 @@ a {
 	top: 50%;
 }
 .brandIcon {
-	width: 10%;
+	width: 8vw;
 	margin-right: 2%;
 	/* margin-top: -4%;
 	 */
 	margin-bottom: 0.5%;
 	opacity: 0;
+}
+.brandIconImage {
+	width: 8vw;
+	margin-right: 2%;
+	/* margin-top: -4%;
+	 */
+	margin-bottom: 0.5%;
+	opacity: 1;
 }
 .brandIconR {
 	opacity: 1;
@@ -575,18 +583,71 @@ a {
 	/* gap: 2vh; */
 }
 .imageModalContainer {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	/* display: flex; */
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	/* grid-gap: 10px; */
+	/* flex-direction: column; */
+	/* justify-content: space-between; */
 	/* justify-content: flex-start; */
 	align-items: center;
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	/* padding: 3%; */
-	/* gap: 5%; */
-	z-index: 1;
-	/* gap: 2vh; */
+
+	z-index: 10;
+
+	background-color: hsla(189, 98%, 63%, 0.432);
+}
+.imageLeftContainer,
+.imageRightContainer {
+	display: flex;
+	flex-direction: column;
+	grid-column: span 1;
+	height: 100%;
+}
+.xContainer {
+	display: flex;
+	flex-direction: column;
+}
+
+.imageCenterContainer {
+	grid-column: span 4;
+	/* height: 100%; */
+}
+.imageLeftContainer {
+	background-color: rgb(48, 48, 48);
+}
+
+.imageCenterContainer {
+	height: 100%;
+	display: flex;
+	/* background-color: rgb(48, 48, 48); */
+	background-color: rgb(11, 181, 233);
+}
+
+.imageRightContainer {
+	background-color: rgb(48, 48, 48);
+}
+.xContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 20%;
+}
+.leftArrowContainer,
+.rightArrowContainer {
+	height: 80%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.imageX {
+	width: 4vw;
+}
+.leftArrow,
+.rightArrow {
+	width: 4vw;
 }
 .rotationPage {
 	display: flex;
