--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
 .finishImg {
 	animation: morph 1s linear infinite;
 	cursor: pointer;
+	width: 6em;
 }
 .finishContainer {
 	margin-top: 2vw;
@@ -244,7 +245,7 @@ html {
 	display: none !important;
 }
 
-video::-webkit-media-controls {
+.video::-webkit-media-controls {
 	display: none !important;
 }
 
@@ -630,12 +631,30 @@ a {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 }
 .imageShowed {
-	padding: 3vw;
-	width: 100%;
+	/* padding: 3vw; */
+	/* margin-top: 4vw; */
+	width: 90%;
 	object-fit: contain;
-	border-radius: 5vw;
+	border-radius: 2vw;
+}
+.imageShowedHolder {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+	height: 90%;
+}
+.imageFiller {
+	width: 100%;
+	height: 10%;
+}
+.videoShowed {
+	width: 90%;
+	object-fit: contain;
+	/* border-radius: 5vw; */
 }
 .imageRightContainer {
 	background-color: rgb(48, 48, 48);
@@ -644,21 +663,39 @@ a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 20%;
+	height: 15%;
 }
 .leftArrowContainer,
 .rightArrowContainer {
-	height: 80%;
+	height: 85%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 .imageX {
+	transition: 0.2s ease-in-out;
+	cursor: pointer;
 	width: 4vw;
+}
+.imageX:hover {
+	transform: scale(1.3);
+}
+.imageX:active {
+	transform: scale(1);
 }
 .leftArrow,
 .rightArrow {
+	transition: 0.2s ease-in-out;
+	cursor: pointer;
 	width: 4vw;
+}
+.leftArrow:hover,
+.rightArrow:hover {
+	transform: scale(1.3);
+}
+.leftArrow:active,
+.rightArrow:active {
+	transform: scale(1);
 }
 .rotationPage {
 	display: flex;
@@ -771,7 +808,7 @@ li:last-child {
 
 .backButton {
 	background: hsla(0, 0%, 58%, 90%);
-	/* height: 80%; */
+
 	height: 3em;
 	margin-left: 6.5%;
 }
