--- a/css/style.css
+++ b/css/style.css
@@ -415,9 +415,10 @@ a {
 }
 .brandIconImage {
 	width: 8vw;
+	height: auto;
+	object-fit: contain;
 	margin-right: 2%;
-	/* margin-top: -4%;
-	 */
+
 	margin-bottom: 0.5%;
 	opacity: 1;
 }
@@ -547,6 +548,10 @@ a {
 	position: relative;
 	overflow: hidden;
 }
+.textContainerSpecModal {
+	position: relative;
+	overflow: hidden;
+}
 
 .labelCont {
 	white-space: pre-wrap;
@@ -584,21 +589,37 @@ a {
 	/* gap: 2vh; */
 }
 .imageModalContainer {
-	/* display: flex; */
 	display: grid;
 	grid-template-columns: repeat(6, 1fr);
-	/* grid-gap: 10px; */
-	/* flex-direction: column; */
-	/* justify-content: space-between; */
-	/* justify-content: flex-start; */
 	align-items: center;
 	position: absolute;
 	height: 100%;
 	width: 100%;
-
 	z-index: 10;
+}
+.specModalContainer {
+	display: flex;
+	flex-direction: column;
 
+	/* align-items: center; */
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 10;
 	background-color: hsla(189, 98%, 63%, 0.432);
+}
+.specTopContainer {
+	padding: 0 3vw 0 3vw;
+	width: 100%;
+	flex: 0 0 15%;
+	background-color: hsla(130, 100%, 75%, 0.432);
+	display: flex;
+	justify-content: space-between;
+}
+.specCenterContainer {
+	width: 100%;
+	flex: 1;
+	background-color: hsla(258, 98%, 63%, 0.432);
 }
 .imageLeftContainer,
 .imageRightContainer {
@@ -672,15 +693,20 @@ a {
 	justify-content: center;
 	align-items: center;
 }
-.imageX {
+.imageX,
+.specX {
 	transition: 0.2s ease-in-out;
 	cursor: pointer;
 	width: 4vw;
+	height: auto;
+	object-fit: contain;
 }
-.imageX:hover {
+.imageX:hover,
+.specX:hover {
 	transform: scale(1.3);
 }
-.imageX:active {
+.imageX:active,
+.specX:active {
 	transform: scale(1);
 }
 .leftArrow,
