--- a/css/style.css
+++ b/css/style.css
@@ -748,6 +748,7 @@ a {
 	/* padding: 3vw; */
 	/* margin-top: 4vw; */
 	width: 90%;
+	max-height: 85vh;
 	object-fit: contain;
 	border-radius: 2vw;
 }
@@ -755,7 +756,6 @@ a {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100%;
 	height: 90%;
 }
 .imageFiller {
