--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,38 @@ html {
 	height: 100%;
 	object-fit: contain;
 }
+.exploreProContainer {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
+	width: 100%;
+	height: 100%;
+}
+.exploreProImgContainer {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.buttonRow {
+	position: absolute;
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 24vw;
+	width: 100%;
+	height: 25%;
+}
+.exploreProImg {
+	width: 100%;
+	height: 100%;
+}
 
 .disabled > div > div > button {
 	pointer-events: none;
@@ -262,21 +294,17 @@ video::slotted::-webkit-media-controls-container {
 
 .button {
 	text-align: center;
-	border-radius: 10vh;
 	font-weight: bold;
-	/* position: absolute; */
-	border: none;
-	/* padding: 5% 5%; */
-	color: white;
-	cursor: pointer;
-	/* pointer-events: all; */
-	z-index: 2;
-	overflow: hidden;
-	background: #018c3c;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
+	border-radius: 10vh;
+	border: none;
+	color: white;
+	cursor: pointer;
+	z-index: 2;
+	overflow: hidden;
+	background: #018c3c;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -284,23 +312,18 @@ video::slotted::-webkit-media-controls-container {
 	text-align: center;
 	white-space: pre-line;
 	font-weight: bold;
-
-	/* border-radius: 10vh; */
-	/* position: absolute; */
+	padding: 0.5em 1em;
+	width: 10em;
 	border: none;
-	/* padding: 1% 1%; */
 	color: white;
 	cursor: pointer;
 	border-radius: 10vh;
 	z-index: 2;
 	overflow: hidden;
-	height: 4em;
-	padding: 0.5vw;
 	background: #018c3c;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	animation: morph 1s linear infinite;
-
-	/* animation: morph 2s ease-in-out infinite; */
+	height: 3.7em;
 }
 .pageButton:hover,
 .button:hover {
@@ -465,6 +488,11 @@ a {
 	/* height: 8%; */
 	opacity: 0;
 	pointer-events: none;
+}
+.backDuoContainer {
+	display: flex;
+	gap: 1vw;
+	margin-left: 6.5%;
 }
 #centerContainer_backButton {
 	pointer-events: none;
@@ -924,9 +952,10 @@ li:last-child {
 
 .backButton {
 	background: hsla(0, 0%, 58%, 90%);
-
-	height: 3em;
-	margin-left: 6.5%;
+	white-space: pre-line;
+	padding: 0.5em 1em;
+	width: 10em;
+	height: 3.7em;
 }
 #loopVideo {
 	transition: all 0.5s ease-in-out;
