--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,8 @@ line {
 }
 .mainB {
 	flex: 1;
-	width: 100%;
+	width: 13vw;
+	height: 3.7em;
 	padding: 5% 5%;
 	display: flex;
 	flex-direction: row;
